// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> doesn't break if banner is not passed 1`] = `
<div
  className="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center"
>
  <div
    className="col-md-6 p-lg-5 mx-auto my-5"
  >
    <h1
      className="display-4 font-weight-normal"
    />
    <p
      className="lead font-weight-normal"
    />
    <a
      className="btn btn-outline-secondary"
      href="/planets"
      onClick={[Function]}
    >
      View all planets
    </a>
  </div>
</div>
`;

exports[`<Banner /> renders without crashing 1`] = `
<div
  className="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center"
>
  <div
    className="col-md-6 p-lg-5 mx-auto my-5"
  >
    <h1
      className="display-4 font-weight-normal"
    >
      Real Estate Agency 
    </h1>
    <p
      className="lead font-weight-normal"
    >
      Hydrogen atoms radio telescope kindling the energy hidden in matter stirred by starlight dispassionate extraterrestrial observer inconspicuous motes of rock and gas. The carbon in our apple pies globular star cluster corpus callosum concept of the number one citizens of distant epochs colonies.
    </p>
    <a
      className="btn btn-outline-secondary"
      href="/planets"
      onClick={[Function]}
    >
      View all planets
    </a>
  </div>
</div>
`;
